The updated code for post controller and user notifications